--- a/index.html
+++ b/index.html
@@ -1,5 +1,76 @@
 <html>
-<body>
-Hello world
-</body>
+    <head>
+    <title> Tugas DDL dan DML </title></head>
+        <body bgcolor='pink'>
+            <p align ='center'><font face='comic sans ms' size='20' color='red'> Tugas DDL DML </p>
+            <p align ='center'><font face='comic sans ms' size='15' color='black'>Perintah DDL</p>
+            <table border="1">
+                <tr>
+                    <td>No.</td>
+                    <td>Perintah</td>
+                    <td>Penjelasan</td>
+                    <td>Sintaks</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>CREATE</td>
+                    <td>Membuat database baru</td>
+                    <td>CREATE DATABASE nama_database;</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>DROP</td>
+                    <td>Menghapus database</td>
+                    <td>DROP DATABASE nama_database;</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>RENAME</td>
+                    <td>Mengubah nama tabel</td>
+                    <td>RENAME TABLE Jurnal TO Jurnalku;</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>ALTER</td>
+                    <td>Mengubah struktur tabel yang telah dibuat</td>
+                    <td>ALTER TABLE table_name ADD column_name datatype;</td>
+                </tr>
+            </table>
+            <br>
+            <p>Perintah DML</p>
+            <table border="1">
+                <tr>
+                    <td>No.</td>
+                    <td>Perintah</td>
+                    <td>Penjelasan</td>
+                    <td>Sintaks</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>UPDATE</td>
+                    <td>Memperbarui Data</td>
+                    <td>UPDATE nama_tabel</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>INSERT</td>
+                    <td>Menyisipkan data</td>
+                    <td>INSERT into nama_tabel values (‘value1’, ‘value2’,’ …’)</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>SELECT</td>
+                    <td>Mengambil data atau menampilkan data dari satu tabel atau beberapa tabel dalam relasi</td>
+                    <td>SELECT nama_kolom from nama tabel</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>DELETE</td>
+                    <td>Menghapus data dari tabel</td>
+                    <td>DELETE nama_kolom FROM nama tabel where kondisi.</td>
+                </tr>
+            </table>
+        </body>
+    
+    
 </html>
