--- a/database/index.html
+++ b/database/index.html
@@ -15,22 +15,22 @@ http://www.templatemo.com/tm-503-newline
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="css/fontAwesome.css">
-        <link rel="stylesheet" href="css/templatemo-style.css">
+        <link rel="stylesheet" href="assert/css/bootstrap.min.css">
+        <link rel="stylesheet" href="assert/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="assert/css/fontAwesome.css">
+        <link rel="stylesheet" href="assert/css/templatemo-style.css">
 
         <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 
-        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+        <script src="assert/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
     <body>
 
         <div class="overlay"></div>
         <section class="top-part">
           <video controls autoplay loop>
-            <source src="videos/video.mp4" type="video/mp4">
-            <source src="videos/video.ogg" type="video/ogg">
+            <source src="assert/videos/video.mp4" type="video/mp4">
+            <source src="assert/videos/video.ogg" type="video/ogg">
           Your browser does not support the video tag.
           </video>
         </section>
@@ -41,9 +41,9 @@ http://www.templatemo.com/tm-503-newline
             <nav>
               <span class="cd-marker item-1"></span>
               <ul>
-                <li class="selected"><a href="#0"><div class="image-icon"><img src="img/home-icon.png"></div><h6>Home</h6></a></li>
-                <li><a href="#0"><div class="image-icon"><img src="img/ddl.png"></div><h6>DDL</h6></a></li>
-                <li><a href="#0"><div class="image-icon"><img src="img/dml.png"></div><h6>DML</h6></a></li>
+                <li class="selected"><a href="#0"><div class="image-icon"><img src="assert/img/home-icon.png"></div><h6>Home</h6></a></li>
+                <li><a href="#0"><div class="image-icon"><img src="assert/img/ddl.png"></div><h6>DDL</h6></a></li>
+                <li><a href="#0"><div class="image-icon"><img src="assert/img/dml.png"></div><h6>DML</h6></a></li>
               </ul>
             </nav> 
           </div> <!-- .cd-slider-nav -->
@@ -85,7 +85,7 @@ http://www.templatemo.com/tm-503-newline
                       <div class="content second-content">
                         <div class="row">
                           <div class="col-md-7 left-image">
-                            <img src="img/left-about-image.jpg">
+                            <img src="assert/img/left-about-image.jpg">
                           </div>
                           <div class="col-md-5">
                             <div class="right-about-text">
@@ -148,7 +148,7 @@ http://www.templatemo.com/tm-503-newline
                       <div class="content second-content">
                         <div class="row">
                           <div class="col-md-7 left-image">
-                            <<img src="img/left-feature-image.png">
+                            <<img src="assert/img/left-feature-image.png">
                           </div>
                           <div class="col-md-5">
                             <div class="right-about-text">
@@ -210,9 +210,9 @@ http://www.templatemo.com/tm-503-newline
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
-        <script src="js/vendor/bootstrap.min.js"></script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script src="assert/js/vendor/bootstrap.min.js"></script>
+        <script src="assert/js/plugins.js"></script>
+        <script src="assert/js/main.js"></script>
 
     </body>
 </html>
